add cli commands to deploy, create and delete flows
