# libs/cli-kontrol-api/api/golang/types/types.gen.go
@@ -1,6 +1,6 @@
 // Package types provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen/v2 version 2.1.0 DO NOT EDIT.
 package types
 
 import (
@@ -14,5 +14,16 @@ type DevFlowSpec struct {
 	ServiceName   *string                  `json:"service-name,omitempty"`
 }
 
-// PostDevFlowJSONRequestBody defines body for PostDevFlow for application/json ContentType.
-type PostDevFlowJSONRequestBody = DevFlowSpec
+// ProdFlowSpec defines model for ProdFlowSpec.
+type ProdFlowSpec struct {
+	DockerCompose *[]compose.ServiceConfig `json:"docker-compose,omitempty"`
+}
+
+// PostDeployJSONRequestBody defines body for PostDeploy for application/json ContentType.
+type PostDeployJSONRequestBody = ProdFlowSpec
+
+// PostFlowCreateJSONRequestBody defines body for PostFlowCreate for application/json ContentType.
+type PostFlowCreateJSONRequestBody = DevFlowSpec
+
+// PostFlowDeleteJSONRequestBody defines body for PostFlowDelete for application/json ContentType.
+type PostFlowDeleteJSONRequestBody = ProdFlowSpec
